# Rizz

./: .gitignore  AGENTS.md  App.xaml  App.xaml.cs  BUILD-LINUX.md  BUILD-SUMMARY.md  BrushOpacityConverter.cs  ChefRamsay.md  DJMixMaster.csproj  DJMixMaster.sln  FOCUS.md  MainWindow.xaml  MainWindow.xaml.cs  README.md  Resources.resx  appsettings.default.json  appsettings.json  log20251114_2315.txt  log20251115_0030.txt  log20251115_0031.txt  log20251115_0036.txt  log20251115_0123.txt  log20251115_0135.txt  log20251115_0153.txt  log20251115_0230.txt  log20251115_0313.txt  log20251115_1215.txt  log20251115_1225.txt  log20251115_1253.txt  log20251115_1304.txt  log20251115_1327.txt  log20251115_1331.txt  log20251115_1332.txt  log20251115_1334.txt  log20251115_1335.txt  log20251115_1353.txt  log20251115_1354.txt  log20251115_1406.txt  log20251115_1601.txt  log20251115_1616.txt  (+22 more)
Audio/: AudioEngine.cs  BeatDetector.cs  DeckPlayer.cs  Logger.cs
Converters/: BrushOpacityConverter.cs
Visualization/: WaveformVisualizer.cs
docs/: ANALYSIS_SUMMARY.md  API_REFERENCE.md  ASIO4ALL.txt  AUDIO_PIPELINE.md  CONTRIBUTING.md  ClubMixer-final.md  DEV_DIARY.md  DEV_DOCS.md  DeepResearchBot.md  Documentation.md  MainWindow.md  PORTABLE_OUTLINE.md  RELEASE_NOTES.md  SESSION_SUMMARY.md  SYSTEM_ANALYSIS.md  TODO.md  TROUBLESHOOTING.md  USER_MANUAL.md  log_policy.md  portaudio.md
libtard/: README_PortAudio.md
scripts/: deep_research_bot.sh
settings/: audio.json
src/: App.xaml  App.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Program.cs  RizzApplication.cs
src/Audio/: Asio4AllSetupWindow.xaml  Asio4AllSetupWindow.xaml.cs  AudioEngine.cs  AudioFileAnalyzer.cs  AudioFileInfo.cs  AudioFileProperties.cs  AudioPlayer.cs  AudioSettings.cs  AudioSettingsWindow.xaml  AudioSettingsWindow.xaml.cs  BeatDetector.cs  CachingReader.cs  Deck.cs  EngineBuffer.cs  EngineMixer.cs  EngineWorkerScheduler.cs  IAudioEngine.cs  Logger.cs  LoggingSampleProvider.cs  LoopingSampleProvider.cs  MixingProvider.cs  MixingSampleProvider.cs  PlayingSampleProvider.cs  RizzAudioEngine.cs  RizzAudioEngineTestHarness.cs  ShredEngineInterop.cs  SilentSampleProvider.cs  SineWaveProvider.cs  SoundManager.cs  TimedSampleProvider.cs  VstHost.cs
src/Audio/Controllers/: PlaybackController.cs  VolumeManager.cs
src/Audio/Decks/: DeckPlayer.cs  DeckPlayerAudioProcessing.cs  DeckPlayerCuePoints.cs  DeckPlayerNavigation.cs
src/Audio/Generators/: WaveformGenerator.cs
src/Audio/Managers/: CuePointManager.cs
src/Audio/Providers/: DeckVolumeProvider.cs
src/Controls/Faders/: Fader.cs  FaderControl.cs
src/JUCE/: dllexports.txt
src/Native/Audio/: JuceAudioEngine.cs  JuceNative.cs
src/RizzAudioEngine/: BeatSource.cpp  BeatSource.h  CMakeLists.txt  ClubMixer.cpp  ClubMixer.h  Makefile  ScratchBuffer.cpp  ScratchBuffer.h  Selekta.cpp  Selekta.h  ShredEngine.cpp  ShredEngine.h  build.sh  test_playback.cpp  test_shredengine.cpp
src/RizzAudioEngine/build_win/: CMakeCache.txt  Makefile  cmake_install.cmake
src/UI/Handlers/: DeckEventHandler.cs
src/UI/Initializers/: AudioEngineInitializer.cs
src/Visualization/Waveforms/: WaveformVisualizer.cs
